done for the day

--- a/spectral/Basic Graph Theory.ipynb
+++ b/spectral/Basic Graph Theory.ipynb
@@ -66,12 +66,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"First, we recall that a graph G = (V, E) is specified by its vertex1\n",
-    "set, V , and edge set E. In an\n",
-    "undirected graph, the edge set is a set of unordered pairs of vertices. Unless otherwise specified, all\n",
-    "graphs will be undirected, simple (having no loops or multiple edges) and finite. We will sometimes\n",
-    "assign weights to edges. These will usually be real numbers. If no weights have been specified, we\n",
-    "view all edges as having weight 1. This is an arbitrary choice, and we should remember that it has\n",
+    "\"First, we recall that a graph G = (V, E) is specified by its vertex\n",
+    "set, V , and edge set E. In an <b>undirected graph</b>, the edge set is a set of unordered pairs of vertices. Unless otherwise specified, all graphs will be undirected, simple (having no loops or multiple edges) and finite. We will sometimes assign weights to edges. These will usually be real numbers. If no weights have been specified, we view all edges as having weight 1. This is an arbitrary choice, and we should remember that it has\n",
     "an impact.\""
    ]
   },
@@ -83,9 +79,9 @@
    "source": [
     "\"An edge {x,y} is said to join the vertices x and y and is denoted by xy. Thus xy and yx mean exactly the same edge. If $xy \\in E(G)$, then x and y are adjacent, or neighboring, vertices of G.\n",
     "\n",
-    "The <i>order</i> of G is the number of vertices in G; it is denoted by |G|. The <i>size</i> of G is the number of edges in G. The size of a graph of order n is at least 0 and at most $n \\choose 2$. A graph of order n and size $n \\choose 2$ is called a complete graph.\n",
+    "The <b>order</b> of G is the number of vertices in G; it is denoted by |G|. The <b>size</b> of G is the number of edges in G. The size of a graph of order n is at least 0 and at most $n \\choose 2$. A graph of order n and size $n \\choose 2$ is called a <b>complete graph</b>.\n",
     "\n",
-    "The set of vertices adjacent to a vertex $x \\in G$ is denoted by $\\Gamma(x)$. Also, $x \\sim y$, and $y \\sim x$ are all equivalent. The <i>degree </i> of x is $d(x) = |\\Gamma(x)|$. The <i>minimal degree</i> of the vertices of a graph G is denoted by $\\delta (G)$ and the <i>maximal degree</i> by $\\Delta (G) $. A vertex of degree 0 is said to be an <i>isolated</i> vertex. If $\\delta (G) = \\Delta (G) = k$, that is, every vertex of G has degree k, then G is said to be <i>k-regular</i> \""
+    "The set of vertices adjacent to a vertex $x \\in G$ is denoted by $\\Gamma(x)$. Also, $x \\sim y$, and $y \\sim x$ are all equivalent. The <b>degree </b> of x is $d(x) = |\\Gamma(x)|$. The <b>minimal degree</b> of the vertices of a graph G is denoted by $\\delta (G)$ and the <b>maximal degree</b> by $\\Delta (G) $. A vertex of degree 0 is said to be an <b>isolated</b> vertex. If $\\delta (G) = \\Delta (G) = k$, that is, every vertex of G has degree k, then G is said to be <b>k-regular</b> \""
    ]
   },
   {
@@ -94,17 +90,17 @@
     "collapsed": true
    },
    "source": [
-    "\"By definition a graph does not contain a <i>loop</i>, an 'edge' joining a vertex to itself; neither does it contain <i>multiple edges</i>, that is, several 'edges' joining the same two vertices. In a <i>multigraph</i> both multiple edges and and multiple loops. When there is any danger of confusion, graphs are called <i>simple graphs</i>.\n",
+    "\"By definition a graph does not contain a <b>loop</b>, an 'edge' joining a vertex to itself; neither does it contain <b>multiple edges</b>, that is, several 'edges' joining the same two vertices. In a <b>multigraph</b> both multiple edges and and multiple loops. When there is any danger of confusion, graphs are called <b>simple graphs</b>.\n",
     "\n",
-    "If the edges are <i>ordered</i> pairs of vertices, then we get the notions of a <i>directed graph</i> and <i>directed multigraph</i>. An ordered pair $(a,b)$ is said to be an edge <i>directed from $a$ to $b$</i>. A vertex $x$ of a directed graph has an outdegree and an indegree: the <i>outdegree</i> $d^+(x)$ is the number of edges starting at $x$, and the <i>indegree</i> $d^-(x)$ is the number of edges ending at $x$\n",
+    "If the edges are <b>ordered</b> pairs of vertices, then we get the notions of a <b>directed graph</b> and <b>directed multigraph</b>. An ordered pair $(a,b)$ is said to be an edge <b>directed from $a$ to $b$</b>. A vertex $x$ of a directed graph has an outdegree and an indegree: the <i>outdegree</i> $d^+(x)$ is the number of edges starting at $x$, and the <b>indegree</b> $d^-(x)$ is the number of edges ending at $x$\n",
     "\n",
-    "A <i>path</i> is a graph P of the form\n",
+    "A <b>path</b> is a graph P of the form\n",
     "\n",
     "$$V(P) = \\{x_0, x_1, ..., x_l\\}, ~~~~ E(P) = \\{x_0 x_1, x_1 x_2, ... , x_{l-1} x_l\\}.$$\n",
     "\n",
-    "This path P is usually denoted by $x_0 x_1 ... x_l$ and $l = e(P)$, where $e(G)$ is the size or the number of edges in G, is called the <i>length</i> of P.\n",
+    "This path P is usually denoted by $x_0 x_1 ... x_l$ and $l = e(P)$, where $e(G)$ is the size or the number of edges in G, is called the <b>length</b> of P.\n",
     "\n",
-    "A graph is <i>connected</i> if for every pair $\\{x, y\\}$ of distinct vertices there is a path from $x$ to $y$.\n",
+    "A graph is <b>connected</b> if for every pair $\\{x, y\\}$ of distinct vertices there is a path from $x$ to $y$.\n",
     "\n",
     "\n",
     "\""
@@ -114,9 +110,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"A graph which is not connected is made up of <i>connected components</i>. A <i>simple path</i> is a path in which no vertex is repeated. A <i>cycle</i> is a path that is simple except that the first and the last vertex are the same (a path from a point back to itself). A graph with no cycles is called a <i>tree</i>. A group of disconnected trees is called a <i>forest</i>. A <i>spanning tree</i> of a graph is a subgraph that contains all the vertices but only enough of the edges to form a tree. Note that if we add any edge to a spanning tree, it must form a cycle. A spanning tree on V vertices has exactly V-1 edges.\"\n",
+    "\"A graph which is not connected is made up of <b>connected components</b>. A <b>simple path</b> is a path in which no vertex is repeated. A <b>cycle</b> is a path that is simple except that the first and the last vertex are the same (a path from a point back to itself). A graph with no cycles is called a <b>tree</b>. A group of disconnected trees is called a <b>forest</b>. A <b>spanning tree</b> of a graph is a subgraph that contains all the vertices but only enough of the edges to form a tree. Note that if we add any edge to a spanning tree, it must form a cycle. A spanning tree on V vertices has exactly V-1 edges.\"\n",
     "\n",
-    "\"Graphs with all edges present are called <i>complete graphs</i>; graphs with relatively few edges ( say less than V log V) are called <i>sparse</i>; graphs with relatively few of the possible edges missing are called <i>dense</i>"
+    "\"Graphs with all edges present are called <b>complete graphs</b>; graphs with relatively few edges ( say less than V log V) are called <b>sparse</b>; graphs with relatively few of the possible edges missing are called <b>dense</b>"
    ]
   },
   {
