finished another problem, thought id upload

--- a/mStat1/Homework #4.ipynb
+++ b/mStat1/Homework #4.ipynb
@@ -232,11 +232,24 @@
     "\n",
     "$$\\xi_{\\text{post}} = n \\xi_{0} + \\xi_{\\text{prior}}$$\n",
     "\n",
+    "\n",
+    ".\n",
+    "\n",
     "$$\\theta_{\\text{post}} = \\frac {n\\xi_{0} \\bar{x} + \\theta_0 \\xi_{\\text{prior}}}{n \\xi_{0} +\\xi_{\\text{prior}}}$$\n",
     "\n",
-    "First, let's find $\\xi_{\\text{prior}} = \\xi_{\\text{post}}/ ( 20  \\xi_{0})$\n",
+    "First, let's find $\\xi_{\\text{prior}}$\n",
     "\n",
-    "We know that the posterior $\\sigma = 0.1$ and therefore $\\sigma^2 = 0.01$"
+    "We know that the posterior $\\sigma = 0.1$ and therefore $\\sigma^2 = 0.01 = 1/\\xi_{\\text{post}} ~~ \\rightarrow ~~ \\xi_{\\text{post}}$. Therefore\n",
+    "\n",
+    "$$\\xi_{\\text{post}} = n \\xi_{0} + \\xi_{\\text{prior}} ~~~ \\rightarrow ~~~~ 100 = 20 + \\xi_{\\text{prior}} $$\n",
+    "\n",
+    "$$ \\rightarrow ~~~~~ \\xi_{\\text{prior}}  = 80$$\n",
+    "\n",
+    "\n",
+    "Now, to find $\\theta_0$\n",
+    "\n",
+    "\n",
+    "$$15 = \\frac {200 + 80 \\theta_0 }{20 + 80} ~~~ \\rightarrow ~~~ \\theta_0 = 16.25$$\n"
    ]
   },
   {
