finished for now

--- a/mStat1/Homework #4.ipynb
+++ b/mStat1/Homework #4.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>8.62)</b> Show that the gamma distribution is a conjugate prior for the exponential distribution.\n",
+    "<b>8.62)</b> <i>Show that the gamma distribution is a conjugate prior for the exponential distribution.</i>\n",
     "\n",
     "From Wikipedia: In Bayesian probability theory, if the posterior distributions p(θ|x) are in the same family as the prior probability distribution p(θ), the prior and posterior are then called conjugate distributions.\n",
     "\n",
@@ -42,13 +42,13 @@
     "It should be clear that when $\\alpha = 1$, we are left with the exponential distribution and therefore the posterior is in the same family as the prior. \n",
     "\n",
     "\n",
-    "Suppose that the waiting time in a queue is modeled as an exponential\n",
+    "<i>Suppose that the waiting time in a queue is modeled as an exponential\n",
     "random variable with unknown parameter λ, and that the average time to serve a\n",
     "random sample of 20 customers is 5.1 minutes. A gamma distribution is used as\n",
     "a prior. Consider two cases: (1) the mean of the gamma is 0.5 and the standard\n",
     "deviation is 1, and (2) the mean is 10 and the standard deviation is 20. Plot the\n",
     "two posterior distributions and compare them. Find the two posterior means and\n",
-    "compare them. Explain the differences.\n",
+    "compare them. Explain the differences.</i>\n",
     "\n",
     "Following along from the example in the book yields:\n",
     "\n",
@@ -217,6 +217,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "According to the book, the marginal is simply \n",
+    "\n",
+    "$$f_X(x) = \\int f_{X | \\Lambda } (x |\\lambda ) f_{ \\Lambda } (\\lambda ) d \\lambda$$\n",
+    "\n",
+    "This yields a pretty complicated expression:\n",
+    "\n",
+    "$$f_X(x) = \\int d \\lambda\\left[ \\lambda^{(x+\\alpha -1)} (1 -\\lambda)^{(n - x + \\beta -1)} \\right] \\left[ \\frac {\\Gamma (\\alpha +\\beta)}{\\Gamma(\\alpha) \\Gamma(\\beta)} \\right] \\left[ \\frac {\\Gamma(n+1) } {\\Gamma(x + 1)\\Gamma ( n -x +1)}\\right]$$\n",
+    "\n",
+    "which is equal to \n",
+    "\n",
+    "$$f_X(x) = \\left[ \\frac {\\Gamma(x + \\alpha) \\Gamma(n - x + \\beta)} {\\Gamma ( n + \\alpha +\\beta)}\\right] \\left[ \\frac {\\Gamma (\\alpha +\\beta)}{\\Gamma(\\alpha) \\Gamma(\\beta)} \\right] \\left[ \\frac {\\Gamma(n+1) } {\\Gamma(x + 1)\\Gamma ( n -x +1)}\\right]$$\n",
+    "\n",
+    "1) When $\\alpha = \\beta = 1$, the whole expression greatly simplifies to\n",
+    "\n",
+    "$$f_X(x) = \\frac 1 {n+1}$$\n",
+    "\n",
+    "Which I guess is exactly equal probability for each outcome.\n",
+    "\n",
+    "2) Unlike the last question, when $\\alpha = 0.5$ and $\\beta = 5$, we get a rather complicated equation:\n",
+    "\n",
+    "$$f_X(x) = \\frac {(x - 0.5)! (n-x + 4)! 4.5! n!}{(n+4.5)! (-0.5)! (4)! x! (n-x)!}$$\n",
+    "\n",
+    "After the data is taken, we have a beta distribution, with $\\alpha$ and $\\beta$ given by\n",
+    "\n",
+    "$$\\alpha_1 = 4, ~~~~ \\beta_1 = 98$$\n",
+    "\n",
+    "$$ f_X(x) = \\frac {\\Gamma (102)}{\\Gamma (4) \\Gamma (98)} x^{3} (1 - x)^{97}$$\n",
+    "\n",
+    "And for case number 2:\n",
+    "\n",
+    "$$\\alpha_2 = 3.5, ~~~~~ \\beta_2 = 102$$\n",
+    "\n",
+    "$$ f_{X } (x ) = \\frac {\\Gamma (105.5)}{\\Gamma (3.5) \\Gamma (102)} x^{2.5} (1 - x)^{101}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>8.65)</b> Suppose that a random sample of size 20 is taken from a normal distribution\n",
     "with unknown mean and known variance equal to 1, and the mean is found to\n",
     "be $\\bar{x}$ = 10. A normal distribution was used as the prior for the mean, and it was\n",
@@ -239,7 +278,7 @@
     "\n",
     "First, let's find $\\xi_{\\text{prior}}$\n",
     "\n",
-    "We know that the posterior $\\sigma = 0.1$ and therefore $\\sigma^2 = 0.01 = 1/\\xi_{\\text{post}} ~~ \\rightarrow ~~ \\xi_{\\text{post}}$. Therefore\n",
+    "We know that the posterior $\\sigma = 0.1$ and therefore $\\sigma^2 = 0.01 = 1/\\xi_{\\text{post}} ~~ \\rightarrow ~~ \\xi_{\\text{post}} = 100$. Therefore\n",
     "\n",
     "$$\\xi_{\\text{post}} = n \\xi_{0} + \\xi_{\\text{prior}} ~~~ \\rightarrow ~~~~ 100 = 20 + \\xi_{\\text{prior}} $$\n",
     "\n",
@@ -260,9 +299,77 @@
     "be θ. Suppose your prior on θ is uniform on [0, 1] and that she then makes two\n",
     "shots in a row. Assume that the outcomes of the two shots are independent.\n",
     "\n",
-    "a. What is the posterior density of θ ?\n",
     "\n",
+    "a. What is the posterior density of θ ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My prior for two shots is 1/3.\n",
+    "\n",
+    "So, I'm looking for something proportional to\n",
+    "\n",
+    "$$ f_{ \\Lambda } (\\lambda ) \\propto \\lambda^{2} $$\n",
+    "\n",
+    "I'm not sure what the proof of this is, but it makes intuitive sense to me that on the quadratic curve from zero to one, we are looking for the point where half the mass lays on one side and half the mass lays on the other side.\n",
+    "\n",
+    "We can find this value in several ways. One we can use calculus:\n",
+    "\n",
+    "$$\\int_0^y x^2 dx = \\int_y^1 x^2 dx ~~~~~~ \\rightarrow ~~~~~ y^3 = 0.5 ~~~~~~ \\rightarrow ~~~~~ y =  0.7937005259840998$$\n",
+    "\n",
+    "Or we can use the CDF:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.499621,  0.49964 ,  0.49966 ,  0.499679,  0.499698,  0.499718,\n",
+       "        0.499737,  0.499756,  0.499775,  0.499795,  0.499814,  0.499833,\n",
+       "        0.499852,  0.499872,  0.499891,  0.49991 ,  0.49993 ,  0.499949,\n",
+       "        0.499968,  0.499987,  0.500007,  0.500026,  0.500045,  0.500065,\n",
+       "        0.500084,  0.500103,  0.500122,  0.500142,  0.500161,  0.50018 ,\n",
+       "        0.5002  ,  0.500219,  0.500238,  0.500257,  0.500277,  0.500296,\n",
+       "        0.500315,  0.500335,  0.500354,  0.500373,  0.500393,  0.500412,\n",
+       "        0.500431,  0.50045 ,  0.50047 ,  0.500489,  0.500508,  0.500528,\n",
+       "        0.500547,  0.500566])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = linspace(0.7935,0.794,50)\n",
+    "heads = 2\n",
+    "tot = 2\n",
+    "a = heads + 1\n",
+    "b = tot - heads +1\n",
+    "y = beta.pdf(x,a,b)\n",
+    "around(beta.cdf(x,a,b),6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "b. What would you estimate the probability that she makes a third shot to be?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well... I thought this was the question that I just answered... So 0.7937005259840998"
    ]
   }
  ],
