--- a/mStat1/ch8.ipynb
+++ b/mStat1/ch8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -13,6 +13,14 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: pylab import has clobbered these variables: ['beta']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n"
+     ]
     }
    ],
    "source": [
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -98,6 +106,52 @@
     "        heads += 1\n",
     "    subplot(10,2,i)\n",
     "    plot_this(i,heads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.4996,  0.4996,  0.4997,  0.4997,  0.4997,  0.4997,  0.4997,\n",
+       "        0.4998,  0.4998,  0.4998,  0.4998,  0.4998,  0.4999,  0.4999,\n",
+       "        0.4999,  0.4999,  0.4999,  0.4999,  0.5   ,  0.5   ,  0.5   ,\n",
+       "        0.5   ,  0.5   ,  0.5001,  0.5001,  0.5001,  0.5001,  0.5001,\n",
+       "        0.5002,  0.5002,  0.5002,  0.5002,  0.5002,  0.5003,  0.5003,\n",
+       "        0.5003,  0.5003,  0.5003,  0.5004,  0.5004,  0.5004,  0.5004,\n",
+       "        0.5004,  0.5005,  0.5005,  0.5005,  0.5005,  0.5005,  0.5005,\n",
+       "        0.5006])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZMAAAETCAYAAADzrOu5AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHl9JREFUeJzt3Xu0XFWd4PFvkdzw1oggGBIIIMjLB0FDbBWDIo84gjQ+\n6PEBrd3GF92+Rgg4Eh+02OLYg0BrCypLRvCt02NkRIf4GA0ikBCQCyQQIeGp7XRjDy4Y+c0fe991\nK4e6t+reeuyqut/PWrU4VbV31e/8SH47p/Y+54AkSZIkSZIkSZIkSZIkSZIk9aXXALcAfwIWTdJu\nRW63HvgKsG1+fTHwS+BG4Drg+fn17YArgJuAXwNndjpwSVIZS4EvVl47EDgAuIaJB5OFwJ2MDyBf\nBU7N26uBY/P28flzAE4jDSYA2wN3AXtNM25JGiqzSwfQpmjw2mgL/f4NeAzYgXQEswOwJb93H/Dk\nvD238vqOwKz830fz50iSBtxSnnhkMmayIxOAtwIPAw8CX657fW/gHuBuYDNbH31cntv/AfiraUUs\nSeoba0hzGncAv8vbNwLH1LWZbDDZjzTv8VTS0dm3gdfn934InJS3XwNcnbffAHyTdGSyG+kIaJ/2\nd0WSVNpLmN6RyeuAS+qevxG4KG/X/3RVA/41b19MGlDGXEoabCRpxtumhTbHkf4VfgdwxgRtLsjv\nrwMOa6HvR3PbtcCPgAX59YXAI4wfaVzcJLbaNN8fBZaQJtJrwNGkIxWADaRBCuClwO11fV6at3fM\n/W9t8v2SJNJPOhtIRX6EVPwPqrRZBqzK20eQfoJq1nfnuv6nM36UsJC0VLdVLwG+UHntJNKcxyPA\n/cD38+vzgO/VtfsA40uDL8sxAjwPuDbH+wvGB8dtSXMm63O/900hTkma0V4AXFX3/EyeeH7FZ0k/\nG40ZBfZosS+k8z3Oy9sLmdpgIknqA81+5tqT9K/8MZvza620mdek77mkFVOnMj6YQJrUvpF0vseL\nmsQnSeoDzQaTRudxNNJs7qKRs0nLbr8EfDq/di9p/uQw4L2kM9N3btRZktQ/mp20uIXxyXHy9uYm\nbebnNiMt9IU0YIzNuTyaHwA3ABuB/fN2vQ2k5b2SpNZtBJ5R4otn5y9fCMyh+QT8EsYn4Cfru39d\n/9MZP2lwV9LEPcC+pMFnboO4Wj1iGlQrSwfQZStLB9BFK0sH0GUrSwfQZStLB9BlXaudzY5M/h/w\nLuB/kor8paTlsMvz+58jDSTLSEcL/w78ZZO+AB8Hnkm6lMlG4O359SOBj5AudfJ4/p7/M92dkyRp\nMh6ZDLaVpQPoopWlA+iylaUD6LKVpQPosq7VzlZOWlTvrS4dQJetLh1AF60uHUCXrS4dQJetLh2A\nemvYj0wkqRs8MpEk9S8HE0lS2xxMJEltczCRJLXNwUSS1DYHE0lS2xxMJEltczCRJGIWxLsglpWO\nRL3lSYuSOiSeBbEG4icQB5aOpsusnRUmRFKbYnuIcyEehPhriJnwS421s8KESGpDHAVxO8TXIJ5e\nOpoesnZWmBBJ0xC7QFwKcTfEK0tHU4C1s8KESJqCqEGcAnEfxAUQM/V24NbOChMiqUWxN8QqiPUQ\nS0pHU5i1s8KESGoiZkG8B+K3EGdBjJSOqA9YOytMiKRJxHMhroO4BuKA0tH0EWtnhQmR1EDsAPGJ\nvNz3zWmuRHWsnRUmRFJFHA2xEeJKiN1LR9OnrJ0VJkRSFrtCfAniNxCvKB1Nn7N2VpgQacaLGsQb\nIO6H+DTETqUjGgDWzgoTIs1osQ/EVRBrIZ5fOpoBYu2sMCHSjBSzId6fl/ue4XLfKbN2VpgQacaJ\nRRA3QPwQYr/S0Qwoa2eFCZFmjNgR4nyIByDe5HLftlg7K0yINCPEsRB3QVwOsVvpaIaAtbPChEhD\nLXbLA8hdEMeVjmaIFK2dxwGjwB3AGRO0uSC/vw44rIW+H81t1wI/AhbUvbcitx8Fjpng+xxMpKEU\nNYhT809an0o/camDitXOWcAGYCEwQir+B1XaLANW5e0jgDUt9K2//PPpwCV5++DcbiT320Dj+9Q7\nmEhDJ/bLk+s3QBxeOpoh1bXa2ew2lYtJBX0T8BhwJXBipc0JwGV5+1pgLrBHk74P1/XfCfht3j4R\nuCK335T7L255byQNoBhJy3y5FrgKWAy16wsHpSma3eT9PYF76p5vJh19NGuzJzCvSd9zgTcCjzA+\nYMxj/Mim/rMkDaV4PvBPwEOkQeTOwgFpmpodmbR6SDSdpXpnA3sBXwT+oQMxSBoYsVO6BAr/DHwK\nONaBZLA1OzLZwtaT4wtIRwuTtZmf24y00BfgK4zPuTT6rC0TxLaybnt1fkjqe7EMuBj4MXAo1H7b\npIOmb2l+FDcb2EiaDJ9D8wn4JYz/TDVZ3/3r+p8OfDlvj03AzwH2yf0bHfV4tCINnNg9Xx5+Q7pc\nvAooWjuPB24jTYavyK8tz48xF+b31wGLmvQF+AawnjRwfBN4Wt17Z+X2o8CxE8TkYCINjKhBvCXf\nsOq8dAMrFWLtrDAh0kCIA/Ktc38J8ZzS0cjaWWVCpL4WcyDOzlf3fTfErNIRCbB2PoEJkfpWLIFY\nD/E9iL1LR6OtWDsrTIjUd2JniM9A3Adxilf37UvWzgoTIvWVOAHibohLIXYpHY0mZO2sMCFSX4in\nQ3wd4naIo0pHo6asnRUmRCoqtoH467zc91yI7UtHpJZYOytMiFRMHAjxE4g1EM8qHY2mxNpZYUKk\nnos5EB+CeAjiXS73HUjWzgoTIvVU/BnELRD/HWJB8/bqU9bOChMi9UQ8GeJiiHshXuNy34Fn7aww\nIVLXxUkQmyH+CeIppaNRR1g7K0yI1DUxD+JbEKMQR5aORh1l7awwIVLHxTYQb8sT7B+B2K50ROo4\na2eFCZE6Kg6G+N/5cUjpaNQ11s4KEyJ1RGwH8eF8NPL2dHSiIWbtrDAhUtviyDwv8i2IPUtHo56w\ndlaYEGnaYm5eobU5rdjSDGLtrDAh0pRFLZ8rsiWfO/Lk0hGp56ydFSZEmpJYkM9evwXihaWjUTHW\nzgoTIrUkZkGcnm+f+yGIbUtHpKKsnRUmRGoqnpWv7PtTiINKR6O+YO2sMCHShGK7fI+RhyDe6nJf\n1bF2VpgQqaE4Kt/18OvpLojSVqydFSZE2krsku+/fg/ECaWjUd+ydlaYEAnIy31PgbgP4jMQTyod\nkfqatbPChEjE3hCrINZDLCkdjQaCtbPChGgGi1kQ78nLfc9Kt9OVWmLtrDAhmqHiuRC/glgNcUDp\naDRwrJ0VJkQzTOwA8QmIByHe7O1zNU1Fa+dxwChwB3DGBG0uyO+vAw5roe8ngVtz+28BY9cIWgg8\nAtyYHxdP8H0OJppB4uUQGyGugNi9dDQaaMVq5yxgA6nIjwBrgeqZtMuAVXn7CGBNC31fDoydSHVe\nfpDbrm8hLgcTzQCxK8RlEJsglpWORkOha7Wz2Zmxi0kDwibgMeBK4MRKmxOAy/L2tcBcYI8mfa8G\nHq/rM3+a8UtDKGoQbwBuBv4FOBRqq5p0kopqNpjsCdxT93xzfq2VNvNa6AvwZsaPbAD2If3EtRp4\nUZP4pCET+wBXAe8HXgm190DtD4WDkpqa3eT9Vg+JpjsZeDbwKPCV/PxeYAHwe2AR8B3gEODhBn1X\n1m2vzg9pQMVs4N3AmaQ5xf8CtcfKxqQhsDQ/uq7ZYLKFVNzHLCAdYUzWZn5uM9Kk72mk+ZaX1b32\naH4A3ABsBPbP21Urm8QuDYhYBFxC+knrCKhtLByQhsdqtv6H9jllwkiDzUbSxPgcmk/AL2F8An6y\nvscBtwC7Vj5rV9LEPcC+pMFnboO4nIDXEIgdIc6HeADiTS73VQ8UrZ3HA7eRJtNX5NeW58eYC/P7\n60g/T03WF9JS4d/wxCXAJ5MmHW8ErgdeMUFMDiYacHEsxF0Ql0PsVjoazRjWzgoTogEVu+UB5M40\noEg9Ze2sMCEaMFGDODX/pHV++olL6jlrZ4UJ0QCJZ0D8EOL6PNkulWLtrDAhGgAxAnFmvrrv+/Ly\nX6kka2eFCVGfi+dDrIW4Kp+IKPUDa2eFCVGfip0g/gHifojXu9xXfcbaWWFC1IdiWb4o45cgnlo6\nGqkBa2eFCVEfid0hroTYAHF06WikSVg7K0yI+kDUIN6Sb1h1XrqBldTXrJ0VJkSFxQH51rm/hHhO\n6WikFlk7K0yICok5EB/My33fDTGreR+pb1g7K0yICogXQNwM8T2IvUtHI02DtbPChKiH4kkQF0Lc\nB3GKy301wKydFSZEPRInQtwDcQnELqWjkdpk7awwIeqymAfxDYjbIZaWjkbqEGtnhQlRl8Q2EMsh\nHoL4GMR2pSOSOsjaWWFC1AVxEMRPIX4BcWjpaKQusHZWmBB1UGwLcU4+Gnmny301xKydFSZEHRIv\nhPg1xHch5peORuoya2eFCVGbYi7EP0JsgXi1y301Q1g7K0yIpilqECfnQeSzaVCRZgxrZ4UJ0TTE\nfIjvQNwK8eLS0UgFWDsrTIimIGblifWHIFamCXdpRrJ2VpgQtSgOzUt9fwZxcOlopMKsnRUmRE3E\ndhAfzUcjy9PJiNKMZ+2sMCGaRLwE4jaIb6bLokjKrJ0VJkQNxFMgPp8vzPiq0tFIfcjaWWFCVCdq\nEK+FuDdfKv5JpSOS+pS1s8KEKIu9IP4537Tqz0pHI/W5orXzOGAUuAM4Y4I2F+T31wGHtdD3k8Ct\nuf23gCfXvbcitx8Fjpng+xxMZryYBfE3+fa5H0y305XURLHaOQvYACwERoC1wEGVNsuAVXn7CGBN\nC31fDoytrjkvPwAOzu1Gcr8Nde3qOZjMaPFsiGshfgzxzNLRSAOka7Wz2XLJxaSCvgl4DLgSOLHS\n5gTgsrx9LTAX2KNJ36uBx+v6jF1g70Tgitx+U+6/eCo7pGEW20N8HPgh8HngKKjdVjgoSTQfTPYE\n7ql7vjm/1kqbeS30BXgz40c283K7Zn0048TLgPXAvsCzoXYJ1B5v0klSj8xu8n6rh0TTveLq2cCj\nwFemEcPKuu3V+aGhE08FzgdeBrwDav+jcEDSIFmaH13XbDDZAiyoe76ArY8cGrWZn9uMNOl7Gmm+\n5WVNPmvLBLGtnDRyDbioAX8BfAr4GnAI1B4uG5M0cFaz9T+0zykTRhpsNpImw+fQfAJ+CeMT8JP1\nPQ64Bdi18lljE/BzgH1y/0ZHPU7AD7VYCPF9iJsgnDOTOqdo7TweuI00Gb4iv7Y8P8ZcmN9fByxq\n0hfS0t/fADfmx8V1752V248Cx04Qk4PJUIrZEO/Ny31XQIyUjkgaMtbOChMydOIwiF9B/Ahi/9LR\nSEPK2llhQoZG7AjxSYgHIE7z9rlSV1k7K0zIUIhjIO6EuBziaaWjkWYAa2eFCRlosRvElyHugjiu\ndDTSDGLtrDAhAylqEG/KP2mdn37iktRD1s4KEzJwYj+IqyFugDi8dDTSDGXtrDAhAyNmQ3wgL/d9\nf3ouqRBrZ4UJGQjxPIi1ED+A2Ld0NJKsnVUmpK/FThCfhrgf4g0u95X6hrWzwoT0rVgGsQniMojq\n5XIklWXtrDAhfSd2h7gCYiPE0aWjkdSQtbPChPSNqEG8GeJBiE9A7FA6IkkTsnZWmJC+EAdAXANx\nHcRzS0cjqSlrZ4UJKSrmQJydl/u+G2JW6YgktcTaWWFCioklEOshVkHsXToaSVNi7awwIT0XO0N8\nBuI+iFNc7isNJGtnhQnpqTgB4m6ISyF2KR2NpGmzdlaYkJ6Ip0N8HeJ2iKNKRyOpbdbOChPSVbEN\nxFvzct9zIbYvHZGkjrB2VpiQrokDIX4CsQbiWaWjkdRR1s4KE9JxsS3EOXm577tc7isNJWtnhQnp\nqHghxC0Q34VYUDoaSV1j7awwIR0RT4b4R4gtEK92ua809KydFSakbfHnEJshPgcxt3Q0knrC2llh\nQqYt5kN8G2IU4sjS0UjqKWtnhQmZstgG4h0QD0F8OE24S5phrJ0VJmRK4hCIn0P8DOLg0tFIKsba\nWWFCWhLbQXwkH428LR2dSJrBrJ0VJqSpODLPi3wTYs/S0UjqC0Vr53HAKHAHcMYEbS7I768DDmuh\n72uAW4A/AYvqXl8IPALcmB8XT/B9DiYTiqdAfD6v1DqpdDSS+kqx2jkL2EAq8iPAWuCgSptlwKq8\nfQSwpoW+BwIHANfwxMFkfQtxOZg8QdQgXgtxL8RF6RwSSdpK12rn7CbvLyYNCJvy8yuBE4Fb69qc\nAFyWt68F5gJ7APtM0ne0vbC1tdgLuIiU81dD7eeFA5I0wzSbkN0TuKfu+eb8Witt5rXQt5F9SD9x\nrQZe1EL7GSxmQfwNcANpIF/kQCKphGZHJq0eEnXqMhz3AguA35N+/voOcAjwcIO2K+u2V+fHDBLP\nBj4P/BF4IdRuKxyQpP6zND+6rtlgsoVU3McsIB1hTNZmfm4z0kLfqkfzA9K/tjcC++ftqpVNPmtI\nxfbAfwb+CjgL+ALUHi8bk6Q+tZqt/6F9Tpkw0mCzkTQxPofmE/BLGJ+Ab6XvNcDhdc93JU3cA+xL\nGnwaXTdqhk7Ax0sh7oD4KsQepaORNHCK1s7jgdtIk+kr8mvL82PMhfn9dWy9OqtRX4CTSPMpjwD3\nA9/Pr58M3EyaM7keeMUEMc2wwSSeCvGFfB/2V5aORtLAmmG1s7kZkpCoQfxHiPsg/ivEzqUjkjTQ\nZkjtbN0MSEgshPg+xE0Qi0tHI2kozIDaOTVDnJCYDfHefPvcMyFGSkckaWgMce2cniFNSCyCuB7i\nRxDPKB2NpKEzpLVz+oYsIbEjxCchHoA4zdvnSuqSIaud7RuihMSxEHdC/DeIp5WORtJQG6La2RlD\nkJDYDeJyiE0Qx5eORtKMMAS1s7MGOCFRgzg1/6T1qfQTlyT1xADXzu4Y0ITEfhBXQ9wAcXjz9pLU\nUQNaO7tnwBISIxAfyMt935+W/0pSzw1Y7ey+AUpIPB9iLcQPIPYtHY2kGW2AamdvDEBCYieIT0Pc\nD/F6l/tK6gMDUDt7q88TEsvyKq3LIHYtHY0kZX1eO3uvTxMSu0NcCbEB4ujS0UhSRZ/WznL6LCFR\ng3gLxIMQ50HsUDoiSWqgz2pneX2UkDgA4hqI6yCeWzoaSZpEH9XO/tAHCYk5EGfn5b7vhpjVvI8k\nFdUHtbO/FE5ILIFYD7EKYu+ysUhSyxxMKgolJJ4E8Zl858NTXO4racA4mFQUSEicAHEPxKUQu/T+\n+yWpbQ4mFT1MSDwd4hsQt0Mc1bvvlaSOczCp6EFCYhuI5RAPQZwLsV33v1OSusrBpKLLCYmDIH4K\n8QuIQ7v7XZLUMw4mFV1KSGwLcU4+Gnmny30lDRkHk4ouJCReBPFriO9CzO/850tScQ4mFR1MSMyF\n+CzEFoiTXe4raYg5mFR0ICFRy4PHljyYzG3/MyWprzmYVLSZkJgP8R2IWyFe3JmQJKnvOZhUTDMh\nsU2eWH8I4sNpwl2SZoyig8lxwChwB3DGBG0uyO+vAw5roe9rgFuAPwGLKp+1IrcfBY6Z4PumkZA4\nFOLnED+DOHjq/SVp4BUbTGYBG4CFwAiwFjio0mYZsCpvHwGsaaHvgcABwDVsPZgcnNuN5H4bgG0a\nxDWFhMR2EB/LRyPL09GJJM1IXRtMmhXWxaSCvgl4DLgSOLHS5gTgsrx9LTAX2KNJ31Hg9gbfdyJw\nRW6/Kfdf3NquNBIvIR0tHQg8B2qfg9rj0/88SVIjzQaTPYF76p5vzq+10mZeC32r5uV2U+nTQOwC\ncQlwOfABqL0aavdO/XMkSa1oNpi0ekjUzXMzpvKTVg3idcDNwB+BQ6D23S7FJUnKZjd5fwuwoO75\nArY+cmjUZn5uM9JC32bfNz+/1sjKuu3VEHcBF5HmWk6G2i+afJckDbul+VHcbGAjqUDPofkE/BLG\nJ+Bb6XsNcHjd87EJ+DnAPrl/o6OeuqOVmJVvm/tbiA+m2+lKkhooujT4eOA20mT4ivza8vwYc2F+\nfx1br85q1BfgJNJ8yiPA/cD36947K7cfBY6dIKackHgOxHUQqyGeObXdkqQZx5MWKwLiPIgHId7i\n9bQkqSVdG0yazZn0s4XAs6F2f+lAJEmDyUM1SZq6YictSpLUlIOJJKltDiaSpLY5mEiS2uZgIklq\nm4OJJKltDiaSpLY5mEiS2uZgIklqm4OJJKltDiaSpLY5mEiS2uZgIklqm4OJJKltDiaSpLY5mEiS\n2uZgIklqm4OJJKltDiaSpLY5mEiS2uZgIklqm4OJJKltDiaSpLY5mEiS2uZgIklqm4OJJKltrQwm\nxwGjwB3AGRO0uSC/vw44rIW+uwBXA7cDPwDm5tcXAo8AN+bHxS3EJ0nqc7OADaQiPwKsBQ6qtFkG\nrMrbRwBrWuj798AH8vYZwHl5eyGwvoW4ouU9GExLSwfQZUtLB9BFS0sH0GVLSwfQZUtLB9BlXaud\nzY5MFpMGhE3AY8CVwImVNicAl+Xta0lHGXs06Vvf5zLgVdOMf1gtLR1Aly0tHUAXLS0dQJctLR1A\nly0tHcCgajaY7AncU/d8c36tlTbzJum7O/BA3n4gPx+zD+knrtXAi5rEJ0nqA7ObvN/qIVGtxTaN\nPi/qXr8XWAD8HlgEfAc4BHi4xTgkSQU0G0y2kIr7mAWkI4zJ2szPbUYavL4lbz9A+insfuDpwIP5\n9UfzA+AGYCOwf96ut5Hhnzc5p3QAXTbM+zfM+wbu3yDbWOqLZ+cvXwjMofkE/BLGJ+An6/v3jK/u\nOpPxCfhdSRP3APuSBqWxlV6SpAF2PHAbaTJ9RX5teX6MuTC/v47089RkfSEtDf4hT1wa/OfAzaQ5\nk+uBV3RwPyRJkiRpa708EXIX4BrSJP5nOhN+U73cv5cDvwJuyv89qiN7MLle7t9ixk9ivQl4XUf2\nYGK93LcxewF/AN7XZuytGPaTkHv9/+/ZwC9Iv6jcBGzb9h5Mrpf793rG/9/dCPyJtL99o9cnQu4A\nvJD0s1wvBpNe799zSYsZIK18qy6Q6LRe79/2jC9h3wP4LePzap3W630b8w3gq3R/MOnXk5A7pdf7\nN5tUsJ+Vnz+F7l6iqtSfT4BDSYNQX3kBcFXd8zPzo95n2fpfoKOkQjJZ31HGz1fZIz+vdxq9GUxK\n7R+k5de/I/1h6ZaS+7cP3V2NUmLfXkX6y3wO3R9Mer1/C+ntYNLr/VsGfLntqFtX8u/e3wEfnSy4\nEhd6LHEiJPRuKXGp/QM4mbRw4bHpBN6iEvu3GLglP97bRuzN9HrfdiL9i3Blm3G3athPQu71/h1A\nqitXkf7e/af2wm+qZG15LXDFZME1O8+kG3p9ImSvldq/Q0iHpy9v8funq8T+/ZK0fweS/uKuBv61\nxTimotf7thL4NPB/W/zMdg37Sci93r/ZpAHyeaS5oR+RBpX/1WIcU1WqthxB+jP668k+sMSRSTsn\nQjZ6vXoiJGx9ImSvldi/+cC3gDcCd7UReytK/v8bJf3M9YzpBN6CXu/bYtJPXHcBfwucBbyjrT2Y\nXK/371HSQAJbn4TcLb3ev3uAnwD/QhpMVrH1qRGdVurv3inAV6YddRf1+kTIMafRmzmTXu/fXNIk\nYK8ultnr/VvI+BH03sDdwJM6sB+NlPqzCWnOpJs/4cHwn4Tc6/17CulIZPvc/2rSuXXdUuLP5zak\n/28LO7IHXdDLEyEhXbn4d6TD67tJP5d0Uy/374OkZaX1S/h27dyuNNTL/XsD4yey/pK0vLGbev1n\nc0wvBhMY/pOQe/3/7/WkfVxP438kdFqv928p8POORS9JkiRJkiRJkiRJkiRJnXAl4ysm78r/beRv\nSau7bs7bYz5KWmG1lnSC44JKv05e8PNA0gUo/9ihz5MkTcNS4IuTvH8+aVl+1aGkgWQ70jk2VwP7\n5fd2rmt3OnBJpW8nL/i5G+nM/I916POaKnEGvCT1u8kuXVJj4mtVHQhcSzoi+BPwY9L5NrD1ZWR2\nIl0Be8yrgDt54iVLjiGd53E98DVgx9bC5yHSLSm6eZ2+rTiYSNITTXZ9qxeTLkHS6ArWN+f3dyHd\n/uIVpEuXjDmXdOL0qYyf5DjRBT93Bc4GXgYcThpQenFi67SUuNCjJPWrNaQbXO1EGhDG5kXOIJ0d\nDvAXTHytqlHgE7ntv+f+j9e9f3Z+nEm6yOdfMvEFP5cABzN+Bvqcuu2PA/+hwfd/G/jQpHsoSeqZ\nl9B4zmQ2cD/pku6t+DvgbQ1e34t0FAPpYpF35cfvSZd+eidpsGj3Aou9uE8O4JGJJDUy0c9cRwO3\nki6vP5Gnka68uxdwEukS7pCumDx2t8ITGT/qObKu7zmkuZWLSJPoF5Em8DeS5kvmMbU7Hvbi1gaA\ng4kkNTLRPZFexxMn3ucBn2f8QpbfAJ5Kmvx+B/Bv+fWPA88kTcxvBN7eJIaHSFc7v4Lxe8ufTWuD\nyR7AdaQrbD9OWqJ8MGnpsSRJkiRJkiRJkiRJkiRJkiRJkiRJUv/6/1l3sVtfAkLzAAAAAElFTkSu\nQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xadb7768c>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = linspace(0.7935,0.794,50)\n",
+    "heads = 2\n",
+    "tot = 2\n",
+    "a = heads + 1\n",
+    "b = tot - heads +1\n",
+    "plot(x, beta.pdf(x,a,b));\n",
+    "y = beta.pdf(x,a,b)\n",
+    "around(beta.cdf(x,a,b),4)"
    ]
   },
   {
