did a bunch of markov chain stuff

--- a/spectral/Markov Chains.ipynb
+++ b/spectral/Markov Chains.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "\"It is important to know when we can write a matrix $A$ as \n",
     "\n",
-    "$$A = PDP^{-1}$\n",
+    "$$A = PDP^{-1}$$\n",
     "\n",
     "Where $D$ is a diagonal matrix. To see where $D$ comes from, let us suppose\n",
     "\n",
@@ -217,6 +217,193 @@
    "source": [
     "\"Symmetric and Hermitian matrices, which arise in many applications, enjoy the property of always being diagonalizable. Also, the set of eigenvectors can always be chosen as orthonormal"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##The Important Point\n",
+    "\n",
+    "Is that as we can see we are looking for an eigenpair with eigenvalue 1. That's what we mean here:\n",
+    "\n",
+    "\n",
+    "$$ME = E$$\n",
+    "\n",
+    "So let's try that out a bit to see if we can get what we want:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 27.,  72.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = array([[27/99,27/99],[72/99,72/99]])\n",
+    "val, vec = eig(M)\n",
+    "v = vec[:,1]\n",
+    "99*v/(v[0] + v[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we expected.\n",
+    "\n",
+    "And to tie this into random walks, we will have to expicitly do a random walk. I guess this example is as good as any:\n",
+    "\n",
+    "hmmm... I guess that example was not so good actually... because obviously the probabilties all must add up? Not sure what the purpose of that was then? You can go check out the exact text here: \n",
+    "\n",
+    "http://www.math.tamu.edu/~dallen/linear_algebra/chpt5.pdf\n",
+    "\n",
+    "Let's try a different example entirely\n",
+    "\n",
+    "This is from http://www.econ.brown.edu/students/takeshi_suzuki/math_camp_2011/la3-2011.pdf\n",
+    "\n",
+    "Assume $k$ states of the world, which we label $1, 2, . . . , k$. Let the probability that we move to\n",
+    "state $j$ from state $i$ $p_{ij}$ , and call it the transition probability. Then the transition probability\n",
+    "matrix of the Markov chain is the matrix\n",
+    "\n",
+    "\n",
+    "$$P =\\left( \\begin{matrix} p_{11} \\  . . . \\  p_{1k} \\\\ \\vdots \\\\p{k1}  \\ ...\\ p_{kk} \\end{matrix} \\right)$$\n",
+    "\n",
+    "Notice that the rows are the current state, and the columns are the states into which we can move.\n",
+    "Also notice that the rows of the transition probability matrix must add up to one (otherwise the\n",
+    "system would have positive probability of moving into an undefined state).\n",
+    "Example: Say that there are three states of the world: rainy, overcast, and sunny. Let state 1\n",
+    "be sunny, 2 be overcast, and 3 be rainy. Consider the transition probability matrix\n",
+    "\n",
+    "$$P = \\left( \\begin{matrix} 0.8 ~ \\ 0.1 ~ \\ 0.1 \\\\ 0.3 \\ ~ 0.2 \\ ~ 0.5 \\\\ 0.2 ~ \\  0.6 ~ \\ 0.2   \\end{matrix} \\right)$$\n",
+    "\n",
+    "\n",
+    "For example, if it is sunny, the probability it remains sunnny is .8. Also, if it is rainy, the probability\n",
+    "that it becomes overcast is .6.\n",
+    "\n",
+    "And now let's do a random walk on this probability tranisition matrix or whatever it's called.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 34.3857,  13.8958,  12.7246])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = array([[0.8, 0.1 , 0.1], [0.3, 0.2, 0.5], [0.2, 0.6,0.2]])\n",
+    "\n",
+    "#So let's start in state 0, which I guess is sunny, because why not\n",
+    "states = [0]\n",
+    "\n",
+    "from numpy.random import choice\n",
+    "\n",
+    "steps = 10000\n",
+    "for i in range(steps):\n",
+    "    states.append(choice(3, p = M[states[i]]))\n",
+    "\n",
+    "from scipy.stats import itemfreq\n",
+    "61*itemfreq(states)[:,1]/steps #multiply by 61, because I know the answer already"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 1.       ,  0.5472136, -0.3472136]),\n",
+       " array([[ 0.87179487,  0.81607429,  0.07844683],\n",
+       "        [ 0.35897436, -0.43077627, -0.74305903],\n",
+       "        [ 0.33333333, -0.38529801,  0.6646122 ]]))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#And now we try with eigenvalues\n",
+    "M = array([[0.8, 0.1 , 0.1], [0.3, 0.2, 0.5], [0.2, 0.6,0.2]])\n",
+    "eig(M.T) #Now, i'm really confused\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 34.,  14.,  13.])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val, vec = eig(M.T)\n",
+    "v = vec[:,0]\n",
+    "61*v/sum(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, weird and awkward. I guess I still have a lot to learn (obviously we need to transpose... )\n",
+    "\n",
+    "I think I'll obvioulsy have to come back to that, but in the meantime:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next question is, can we efficiently find the eigenvector that has eigenvalue 1?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
